--- a/_posts/2019-06-30-MEVN교과서-(5).md
+++ b/_posts/2019-06-30-MEVN교과서-(5).md
@@ -89,6 +89,8 @@ D3.js는 3D는 아니지만 2D로 구현이 가능한 모든 시각화적인 것
 
 물론 chart.js나 echart.js로도 가능하지만 설계될 때 그렇게 커스터마이징을 설계하지 않았는지 커스터마이징을 하려면 chart.js 내부안에 들어가서 바꿔야 하거나 echart.js로 들어가 바꿔야합니다. 
 
+* D3.js 기본예제 수정예정(추가)
+
 ### 4.2 D3.js : 지도매핑모듈
 D3.js로는 많은 것을 만들 수 있습니다. 그 중에 하나가 바로 지도입니다. 
 
@@ -363,7 +365,7 @@ const icons = svg.append('g').selectAll('svg')
     return [point[0] * k + dx, dy - point[1] * k];
   }
 ```
- * v5에서 달라진 부분존재 추후 수정 예정
+ * v5에서 달라진 부분존재 추후 수정예정
 
 projection 메소드가 궁금할 것같아서 준비했습니다.  위경도에 해당하는 값을 배열로 받아서 첫번째에 그 투사법으로 추출되는 x, 경도를 반환하고 y, 위도를 반환합니다.  
 
@@ -476,21 +478,176 @@ i(1.0); // 20
 이를 이용해서 우리는 애니메이션을 ㅁ나들 수 있습니다. `pieGenerator([0, 100])`에서 부터 `pieGenerator([80, 20])`까지의 애니메이션을 하기 위해 `arcTween`이라는 것을 만들었습니다. 이를 안사용하면 어떻게 될까요? 아무것도 일어나지 않습니다. 애니메이션을 사용하려면 매 순간순간마다 프레임이 있어야 하는데 `arcTween` 없이는 두개의 값사이의 프레임을 만들 사람이 없기 때문입니다.
 
 ![증가하는 숫자](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/4_number.gif) 
-
-이렇게 2개의 D3예제를 통해 가볍게 D3를 범접했습니다. 
   
 ### 4.4  실시간 센서시각화사이트 : REST API 구축
+이제부터 실시간 센서시각화사이트를 본격적으로 만들어 볼 것입니다. 
 #### 4.4.1 아키텍처 구축
+아키텍처를 구축해야 합니다. 어떻게 만들 것인지 그림으로 그려보는 것이 중요합니다. 
+![아키텍처](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/4_아키텍처.PNG) 
+
+아주 간단한 아키텍처입니다. 센서를 내보내는 REST API를 통해 JSON형태의 센서를 받아 MongoDB에 저장한 후 그 값을 뽑아 내어 상태저장소인 Vuex를 통해 상태를 변이시키고 이를 통해 Chart로 표출하는 아키텍처입니다.
+
+ > 참고
+
+사실 아키텍처는 회사에서 정해주거나 팀원들끼리 정한 약속에 의한 양식에 맞춰 작성하는 것이 일반적입니다. 하지만 혼자 만들 때는 이렇게 아무렇게나 그려보면 됩니다. 아무렇게나 그려도 그리는 것은 매우 중요합니다. 
+보통 아키텍처를 그릴 때 아마존에서 사용하는 아이콘을 자주 사용합니다. 
+![아키텍처_아마존](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/4_아키텍처_아마존.PNG)
+보통 이런 아이콘을 사용하는데 이 아이콘은 https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/아마존아이콘.ppt 를 통해 바로 다운 받을 수 있습니다. 참고하시길 바랍니다. 
+
 #### 4.4.2 REST API 특징 
-#### 4.4.3 CORS 및 주의사항
-#### 4.4.4 요청 제한 및 IP 설정   
-#### 4.4.5 센서생성 서버 REST API 구축
+자 이제 센서를 뽑아내는 REST API를 구축할 것인데요. 그 전에 REST API 특징을 살펴보겠습니다.
+REST API를 구축하는 자세한 방법에 대해서 알아보겠습니다. 
+
+API는 Application Programming Interface의 약어로 다른 어플리케이션에서 현재 프로그램의 기능을 이용할 수 있도록 하는 어떠한 프로그램이자 자원을 가져올 수 있는 하나의 문입니다. 이 API를 통해 어떤 정보를 모두 제공하거나 제한해서 제공할 수도 있습니다.  
+
+#### REST의 정의
+웹에 있는 자원들을 HTTP를 활용하여 효율적으로 얻기위한 아키텍처스타일의 집합을 말합니다. 
+기본적으로 웹에 있는 자원들은 URI라는 규칙에 따라 정의되어있고 정한 방법에 따라 그 자원들을 얻거나 수정할 수 있는데 이렇게 얻거나 수정하는 방법들을 좀 더 효율적으로 구현할 수는 없을까 고민이 담긴 집합이며 이를 잘 지킨 아키텍처를 **RESTful하다**라고 합니다.
  
-### 4.5  실시간 센서시각화사이트 : 실시간통신과 디자인
-#### 4.5.1 websocket방식과 polling 방식 비교
-#### 4.5.2 socket.io를 이용한 간단한 채팅 예제
-#### 4.5.3 Vuex 및 프로젝트 뼈대 구축
-#### 4.5.4 디자인 가이드 구축
+#### 아키텍처 규칙
+그럼 어떠한 아키텍처 스타일의 집합일까요? 일단 아래의 6가지 규칙은 지켜야 합니다. 
+
+#### 1. Uniform-Interface : Self-descriptive messages
+독립적으로 자원들이 각각 인터페이스를 가져야 한다는 것입니다. 
+왜 독립적이야 하는가? 
+ - 웹 페이지를 변경했다고 웹 브라우저를 업데이트할 필요는 없다.
+ - 웹 브라우저를 업데이트했다고 웹 페이지를 변경할 필요도 없다.
+ - HTTP 명세가 변경되어도 웹은 잘 동작한다.
+ - HTML 명세가 변경되어도 웹은 잘 동작한다.
+
+즉, 시간이 지나서 클라이언트와 서버가 변경되더라도 언제나 해석 가능하게끔 하는 것입니다. 
+Self-descriptive messages이란 각 자원들의 타입에 대하여 **media 타입**을 이용하고 그 타입에 대해서 IANA에 등록해야 합니다.(하지만 힘듭니다.) 또한 HTTP Header에 타입을 명시해주어야 합니다. 
+
+각 메시지(자원)들은 **MIME types**에 맞춰 표현되며 스스로를 표현해야 합니다. 또한 이 데이타가 무엇을 나타내는지 path를 통해 나타내주어야 합니다. 
+```js
+{
+  "path" : "/kundol"
+}
+```
+링크 : [MIME타입이란](https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/MIME_types) 
+
+#### 1. Uniform-Interface : HATEOAS 구조 
+URL 에 따라 다른 페이지를 보여줘야 하는 것은 물론이며, 서버는 클라이언트 요청에 따른 URL RESPONSE를 보내야 합니다.  
+애플리케이션은 하이퍼링크에 따라 전이가 되어야합니다. 
+```js
+// send person object with HATEOAS links added
+res.json(personObject, [
+    { rel: "self", method: "GET", href: 'http://127.0.0.1' },
+    { rel: "create", method: "POST", title: 'Create Person', href: 'http://127.0.0.1/person' }
+]);
+```
+이렇게 하거나 data위에 링크를 써야 합니다. 
+```js
+{
+  "link":"http://kundol.net/todos/{id}"
+  "data":[]
+}
+```
+
+#### 2. Stateless
+이건 HTTP 자체가 Stateless이기 때문에 HTTP를 이용하는 것만으로도 충족이 됩니다. API를 제공해주는 서버는 세션(session)을 그 서버 쪽에 유지하지 않는다는 의미입니다. 
+
+#### 3. Cacheable 
+HTTP 는 원래 캐싱이 됩니다. 새로고침을 하면 304가 뜨면서 원래 있던 js와 css 이미지등을 불러오는 것을 볼 수 있습니다.
+이러한 캐싱은 네트워크 요청을 줄여주며 이는 UX향상에 도움이 됩니다. 네트워크 요청시 해당되는 자원들을 복사해서 메모리에 저장해두었다가 또 같은 요청시 네트워크요청을 하지 않고 브라우저메모리에 있던 자원을 다시 반환합니다. HTTP 메서드 중 GET에 한정되어있으며 `Cache-Control:max-age=100`이런식으로 한정된 시간을 정할 수가 있으며 이 캐싱된 데이타가 유효한지를 판단하기 위해 `Last-modifed` 그리고 `Etag`를 씁니다.   
+`Etag`는 전달되는 값에 태그를 붙여서 캐싱되는 자원인지를 확인해주는 것입니다. 예를 들어 `Cache-Control:max-age=100`으로 형성된 자료는 100초가 지나면 응답이 완료 되었기 때문에 다시 똑같은 자료를 가져올 수 있습니다. 이 때 Etag, 디지털 지문을 사용한다면 똑같은 자원은 캐싱되서 요청을 줄일 수 있습니다 
+
+ > node.js에서는 npm을 다운받아 `res.setHeader('ETag', etag(body))`이렇게 사용됩니다. 
+
+쿠키는 `public` 또는 `private`로 설정이 가능합니다. 
+
+응답이 `public`으로 표시되면 이와 관련된 HTTP 인증이 구성되어 있고 응답 상태 코드가 정상적으로 캐시할 수 없는 경우에도 캐시가 가능합니다. 대부분의 경우, 명시적 캐싱 정보(예: `max-age`)가 응답이 어떠한 경우든지 캐시가 가능하다고 나타내므로 `public`이 필요하지 않습니다.
+
+반대로, `private` 응답은 브라우저가 캐싱할 수 있습니다. 그러나 일반적으로 이 응답은 단일 사용자를 대상으로 하므로 중간 캐시가 이 응답을 캐시하는 것은 허용되지 않습니다. 예를 들어, 비공개 사용자 정보가 포함된 HTML 페이지는 사용자의 브라우저가 캐시할 수 있지만, CDN은 이 페이지를 캐시할 수 없습니다.
+ - 조금 더 구체적인 예 추가 CDN
+
+#### 4. Client-Server 구조  
+클라이언트와 서버가 서로 독립적인 구조를 가져야 합니다. 물론 이는 HTTP 를 통해 가능한 구조입니다. 서버에서 HTTP 표준만 지킨다면 웹에서는 그에 따른 화면이 잘 나타나게 됩니다. 서버는 그저 API를 제공하고 그 API에 맞는 비즈니스 로직을 처리하면 됩니다. 마찬가지로 클라이언트에서는 HTTP 로 받는 로직만 잘 처리하면 되는 것입니다.
+  
+#### 5. Layered System
+계층구조로 아키텍처를 만들 수 있다는 것을 뜻합니다.  
+
+-------
+
+### URI 규칙
+이렇게 규칙을 지켰으면 이제 자원을 표기하는 URI에 아래의 6가지 규칙을 지켜야 합니다.  
+1. 동작은 HTTP 메소드로 해야 합니다. 수정 = put, 삭제 = DELETE, 추가 = post, 조회 = get을 이용해야 합니다. 
+예를 들어 `/books/delete/1` 이렇게 표기하면 안된다는 것입니다. 
+2. 확장자는 표기하지 말아야 합니다.
+3. 동사가 아닌 명사로만 표기해야 합니다. **유저가 책을 소유한다**라고 한다면 이런식으로 구성되어야 합니다. `유저/유저아이디/inclusion/책/책아이디`
+4. URI는 계층적인 내용을 담고 있습니다.  `/집/아파트/전세` 이런식으로 내려가야 합니다. 
+5. 소문자로 쓰며 너무 길경우에는 **-**를 씁니다. 
+6. HTTP 응답 상태 코드를 활용합니다.
+
+|  상태코드   | 설명 | 
+|:--------|:--------| 
+| 200 OK   | 요청이 성공적으로 되었습니다. | 
+| 201 Created | 요청이 성공적이었으며 그 결과로 새로운 리소스가 생성되었습니다 | 
+| 400 Bad Request | 이 응답은 잘못된 문법으로 인하여 서버가 요청을 이해할 수 없음을 의미합니다. | 
+| 301 Moved Permanently |  이 응답 코드는 요청한 리소스의 URI가 변경되었음을 의미합니다. 새로운 URI가 응답에서 아마도 주어질 수 있습니다. | 
+| 401 Unauthorized |  "비인증(unauthenticated)"을 의미합니다. 클라이언트는 요청한 응답을 받기 위해서는 반드시 스스로를 인증해야 합니다. |  
+| 500 Internal Server Error |  서버에 오류가 있음을 나타냅니다. | 
+
+
+### 도서관 REST API 예 
+도서관의 REST API를 만들 때의 예제를 들고 마무리 하겠습니다.
+
+node.js express 예입니다.
+```js
+app.get('/books/') 
+// 모든 책을 조회합니다.
+app.post('/books/booksid') 
+// 책을 생성합니다. 
+app.put('/books/booksid') 
+// 책을 수정합니다.
+app.get('/books/booksid') 
+// 특정 책을 조회합니다. 
+app.put('/users/userid/books/booksid') 
+// 어떤 유저가 특정 책을 빌립니다. 
+app.patch('/users/userid/books/booksid') 
+// 어떤 유저가 특정 책을 빌립니다. 
+```
+참고로 `put`과 `patch`의 차이점은 `put`은 전체 자원의 교체이며 `patch`는 일부자원의 교체를 뜻합니다. 
+
+예를 들어 `{"a" : 1, "b" : 2}`가 있을 때 `put`의 경우 `{"a" : 1, "b" : 3}`으로 전체적으로 바꿀 떄 쓰는 것이고
+`patch` 는 `{"b" : 3}`이런식으로 부분적으로 바꾸는 것을 말합니다. 
+
+#### 4.4.3 CORS 및 주의사항
+API를 개발할 때는 CORS를 해제시키고 해야 쉽습니다. 지금 현재 개발 서버는 8080 포트를 쓰고 REST API인 12010이란 포트를 쓴다고 했을 때 CORS를 쓰지 않는다면 그 API 서버의 자원에 대해 접근이 불가능합니다. 따라서 개발할 때는 CORS를 해제하고 개발을 하고 개발이 끝난 후에는 **인증IP및포트**에 한해서 API를 열어주는 것이 필요합니다. 추후 코드를 통해 살펴보겠습니다.
+
+#### 4.4.4 요청 제한 및 IP 설정   
+네이버 MAPAPI인 https://www.ncloud.com/product/applicationService/maps 를 보면 월 요청을 제한하고 요청한 갯수에 따라 요금을 부과합니다. 무한적인 API요청은 서버에 부담을 줄 수 있기 때문이며 악의적인 요청은 서버를 중단시킬 수 있기 때문입니다. 우리도 이번에 네이버 Map API와 비슷한 설정을 가진 API를 만들어 볼 것입니다.  
+
+#### 4.4.5 websocket방식과 polling 방식 비교  
+첫번째는 REST API 를 이용한 polling 및 long polling을 통해 구현을 할 것이며 그 다음에는 인증을 거치지 않은 socket.io를 통해 구현을 할 것입니다. 
+Websocket으로 통신한다는 것은 HTTP를 기반으로 설정된 **ws프로토콜**을 통해 양방향통신을 하는 것을 말합니다.
+또한, WebSocket 객체를 통해 양방향통신을 하는데 이 객체는 서버와의 WebSocket 연결을 생성하고 관리할 수 있는 API 들을 제공합니다. 이는 데이터를 전송하거나 주고 받는 등의 API 들을 포함합니다.
+오래된 브라우저의 경우 미지원되므로 이 때는 API로 직접 호출로 polling 방식으로 변경하게끔 해야 합니다. 
+
+예전 양방향 통신 방식(HTTP)
+ - polling : 주기적인 요청 
+ - long polling : RESPONSE 받게 되면 REQUEST를 다시 요청(무한 재귀함수)
+
+#### 라이브러리
+Socket.io는 JavaScript를 이용하여 브라우저 종류에 상관없이 실시간 웹을 구현할 수 있도록 한 기술이자 라이브러리입니다. 하지만 IE8이하는 지원하지 않습니다.  
+
+#### 과정 
+HTTP를 통해 Handshake 과정이 성공적으로 끝나면, HTTP프로토콜이 웹소켓 프로토콜, ws또는 wss로 바꾸는 protocol switching과정 및 Sec-WebSocket-Key이 설정되는 작업 후 웹소켓을 통한 데이타 전송들이 진행됩니다. 
+ - ws : 일반적인 웹소켓
+ - wss : 데이터 보안을 위해서 SSL을 적용한 프로토콜
+
+#### 단점
+1. 많은 트래픽의 경우 서버부하
+2. 오래된 버전의 웹 브라우저(IE9이하)에서는 지원하지 않음
+
+#### 4.4.6 센서생성 서버 REST API 구축
+자이제 더이상의 설명은 그만, 실제로 구축해보도록 하겠습니다. 센서데이타를 구축하는 방법은 크게 3가지가 있습니다. 첫번째는 정말 센서를 사서 구축하는 것이며 두번째는 기상청 Open API를 받는 것이며 세번째는 방재기상포털의 있는 파일을 통해 구축하는 방법입니다. 우리는 세번째 방법으로 해보겠습니다. 날짜는 2019년 8월2일 기준으로 했으며 지역은 제가 사는 강동구를 중심으로 했습니다. 방재기상포털은 https://data.kma.go.kr 에 가면 정말 쉽게 자료들을 다운받을 수 있으며 여기서 구축하는 예제의 파일은  MEVN/4장/sensor/RESTAPI/data/20190802_강동구.csv 에 저장해 두었습니다.  
+
+
+
+### 4.5  실시간 센서시각화사이트 : 실시간통신과 디자인 
+#### 4.5.1 Vuex 및 프로젝트 뼈대 구축
+#### 4.5.2 디자인 가이드 구축
 
 ### 4.6  실시간 센서시각화사이트 : 차트 컴포넌트 
 #### 4.6.1 차트 컴포넌트제작
