--- a/_posts/2019-06-30-MEVN교과서-(7).md
+++ b/_posts/2019-06-30-MEVN교과서-(7).md
@@ -10,4 +10,31 @@ excerpt: MEVN교과서 (7)
 
 ---    
 
-![MEVN교과서](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/mevnlogo_부록A.jpg) 
+![MEVN교과서](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/
+mevnlogo_부록A.jpg) 
+
+## 부록 A. 안정적인 서버를 위한 구축과정
+
+### A.1 로그시스템
+### A.1.1 실시간 로그시스템
+### A.1.2 로그 자료조회
+
+### A.2 오류처리 
+### A.2.1 모나드이용 예제 
+### A.2.2 uncaughtException 처리방법
+
+### A.3 메시지큐 
+지금까지 우리는 WebSocket과 polling, long-polling을 통해 실시간통신을 통해 웹 애플리케이션을 구축했습니다. 이 때 우리가 좀 더 고려할 사항은 뭐가 있을까요? 
+바로 시스템 장애입니다. 이를 메시지큐를 이용하면 해결할 수 있습니다.  
+![메시지큐](/img/20190509_MQ.png)  
+서버가 갑자기 죽거나 서버 점검 등으로 다운타임이 발생하는 동안에는 요청을 보낼 수가 없기 때문에 메세지큐, MQ를 이용해야 합니다. 
+이외에도 너무 많은 처리를 위해 MQ는 필요합니다. 그저 Client와 동기방식으로 많은 데이터 통신을 하게 되면 병목현상이 생기게되고 서버의 성능이 저하되므로 하나의 메시지큐를 위임하여 순차적으로 처리하게끔 해야 합니다.
+
+ > 다운타임 : 시스템을 이용할 수 없는 시간
+
+### 메시지큐 라이브러리 rabbitMQ 
+AMQP(Advanced Message Queueing Protocol)를 활용해 좀 더 쉽게 메세지-큐를 이용해 메세지를 전송/저장/관리하거나 받을 수 있는 기능을 제공하는 메세지 브로커(message broker or queue manager)라는 이름으로 불리는 오픈소스 소프트웨어
+
+### A.3.1 AMQP(Advanced Message Queueing Protocol)를 활용한 메시지큐로 서버불안정화 대비
+### A.3.2 메시지큐 만들어보기 
+
