--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -29,7 +29,7 @@ excerpt: MEVN교과서 (1)
 
 인터넷에 간단히 검색해서 찾을 수 있는 내용들은 최대한 배제해고 최대한 경험과 노하우를 넣고 그냥 인터넷을 보고 이해하기에는 어려운 지식들을 쉽게 설명했으며 그리고 아름다운 코드 중심의 설명이 가득한 책이 되고자 노력했습니다. 많은 도움이 되었으면 합니다.
 
-아울러 이 책에 나오는 모든 예제코드들은 https://github.com/wnghdcjfe/MEVN 를 통해 다운 받을 수 있으므로 참고하시길 바랍니다. 또한 궁금한 사항이 있다면 언제든지 jhc9639@naver.com으로 보내주시면 빠르게 답을 드리겠습니다. 고수분들의 조언도 귀담아 듣겠습니다. 언제든지 쓴 충고와 조언들 부탁드립니다. 
+아울러 이 책에 나오는 모든 예제코드들은 https://github.com/wnghdcjfe/MEVN 를 통해 다운 받을 수 있으므로 참고하시길 바랍니다. 또한 궁금한 사항이 있다면 언제든지 jhc9639@naver.com으로 보내주시면 빠르게 답을 드리겠습니다. 기본적인 사항은 최대한 배제하고자 노력했기 때문에 막히는 부분이 생길수도 있습니다. 30분이상 삽질했는데도 안된다면 언제든지 메일을 보내주시기 바랍니다. 고수분들의 조언도 귀담아 듣겠습니다. 언제든지 쓴 충고와 조언들 부탁드립니다. 
 
 # 독자대상
 이 책을 보려면 다음 기술에 대한 기본 지식이 있어야 합니다. 
@@ -102,15 +102,14 @@ excerpt: MEVN교과서 (1)
 - 애니메이션
   
 ### 4.4  실시간 센서시각화사이트 : REST API 구축
- - 아키텍처 구축
+- 아키텍처 구축
 - REST API 특징
 - CORS 및 주의사항
-- 요청 제한 및 IP 설정   
+- 요청 제한 및 IP 설정    
+- websocket방식과 polling 방식 비교 
 - 센서생성 서버 REST API 구축
  
-### 4.5  실시간 센서시각화사이트 : 실시간통신과 디자인
-- websocket방식과 polling 방식 비교
-- socket.io를 이용한 간단한 채팅 예제
+### 4.5  실시간 센서시각화사이트 : 실시간통신과 디자인 
 - Vuex 및 프로젝트 뼈대 구축
 - 디자인 가이드 구축
 
