취업 술사자 이백아

--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -101,34 +101,31 @@ excerpt: MEVN교과서 (1)
 - 파이 제너레이터
 - 애니메이션
   
-### 4.4  실시간 센서시각화사이트 : REST API 구축
-- 아키텍처 구축
-- REST API 특징
-- CORS 및 주의사항
-- 요청 제한 및 IP 설정    
-- websocket방식과 polling 방식 비교 
-- 센서생성 서버 REST API 구축
+### 4.4  실시간 센서시각화사이트 : 설계
+- 아키텍처 구축    
+- 실시간 통신 : websocket방식과 polling 방식 비교 
+- 센서생성 서버 구축 
  
-### 4.5  실시간 센서시각화사이트 : 실시간통신과 디자인 
+### 4.5  실시간 센서시각화사이트 : 클라이언트와 디자인 
 - Vuex 및 프로젝트 뼈대 구축
-- 디자인 가이드 구축
+- 디자인 구축
 
 ### 4.6  실시간 센서시각화사이트 : 차트 컴포넌트 
-- 차트 컴포넌트제작
-- 고정된 데이타를 기준으로 차트 
-- 업데이트되는 데이타를 기준으로 차트
-- tooltip 이벤트
-- REST API와 연동되어 실제 데이터와 차트구축
-- 메모이제이션 알고리즘을 적용하여 서버요청 최적화 
+- 차트 컴포넌트제작 
+- tooltip 이벤트 
 
 ### 4.7  실시간 센서시각화사이트 : 모니터링 모듈 
 - CPU, 하드웨어 모니터링 모듈 제작
 
 ## 5. 미술작가소개플랫폼 제작
 ### 5.1 아키텍처
- - MongoDB 스키마 구축
- - 디렉토리 설계
- - 이벤트 설계
+- 아키텍처 설계
+- REST API 설계
+- CORS 및 주의사항
+- 요청 제한 및 IP 설정 
+- MongoDB 스키마 구축
+- 디렉토리 설계
+- 이벤트 설계 
 
 ### 5.2 JWT 인증방식 및 구축
  - JWT 소개
