--- a/_posts/2019-06-30-MEVN교과서-(5).md
+++ b/_posts/2019-06-30-MEVN교과서-(5).md
@@ -19,7 +19,7 @@ excerpt: MEVN교과서 (5)
 ### 4.1 시각화 라이브러리 D3.js
 어떠한 데이터를 시각화하는 것은 중요한 일입니다. 같은 데이타라도 다르게 보여줄 수 있으며 효과적으로 내가 주장하는 바를 강하게 나타낼 수 있습니다. 
 
-![콜레라지도](https://w.namu.la/s/6c3158c18fe2d603f52f9ea42944939679abd221f8e2ca97363175550b93ed4ac7f72f404523f13215118118cd6be01873b897a767d89693fadf2597ffe54abaa7fe9d1568040c1a13b28121ef9bec868e30d3a45fc905284d5b32c883d52c98)
+![콜레라지도](https://w.namu.la/s/6c3158c18fe2d603f52f9ea42944939679abd221f8e2ca97363175550b93ed4ac7f72f404523f13215118118cd6be01873b897a767d89693fadf2597ffe54aba3a06e49907a4e55657f4c9a4296cf9a866335c7dc6153847687c9d68db0386ac)
 실제로 데이타 시각화는 사람을 살리는 일도 합니다. 
 
 빅토리아 여왕 시대의 의사인 존스노우는 콜레라가 수인성 전염병이라는 것을 파악하기 위해 펌프가 있는 지역들을 위처럼 시각화 했고 이를 통해 콜레라가 펌프와 상관관계여부를 파악하고 규칙성을 찾아내었습니다.  
@@ -404,6 +404,98 @@ console.log(큰돌)
 
 #### 전체코드 : MEVN/4장/sensor/src/views/Number.vue 
 필수적인 코드만 차근차근 살펴보겠습니다. 
+```html
+<template>
+  <div class="hello">
+    <h2>커져가는 원속의 숫자 + 게이지</h2>
+    <svg></svg> 
+  </div>
+</template>
+
+<script>
+  import * as d3 from 'd3';   
+  export default {
+    name: 'HelloWorld3',
+    data() {
+      return { 
+      }
+    },
+    mounted() {
+      this.showCircle();
+    },
+    methods: {
+      showCircle() {  
+        const width = window.innerWidth - 20;
+        const height = window.innerHeight - 20; 
+        const radius = Math.min(width, height) / 3;    
+        const format = d3.format(".0%");  
+        const group = d3.select("svg")
+          .attr("width", width)
+          .attr("height", height)
+          .append("g")
+          .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+        const textDOM = group.append("text")
+          .attr("text-anchor", "middle")
+          .attr("dy", ".3em");
+          
+        const arc = d3.arc()
+          .innerRadius(radius * 0.7)
+          .outerRadius(radius); 
+        const pieGenerator = d3.pie().sort(null)
+        const background = group.append("path")
+          .data(pieGenerator([1])) 
+          .attr("class", (d, i) =>"backColor") 
+          .attr("d", arc)
+
+        const foreground = group.append("path")
+          .data(pieGenerator([0, 100])) 
+          .attr("class", (d, i) =>`frontColor${i}`) 
+          .attr("d", arc)
+ 
+
+        function arcTween(pie){
+          return function(d){ 
+            const interpolate  = d3.interpolate(pie[0].startAngle,pie[0].endAngle);
+            const interpolateText  = d3.interpolate(0,pie[0].value); 
+            return function(t){
+              d.endAngle = interpolate(t);
+              textDOM.text(format(interpolateText(t) / 100));
+              return arc(d);
+            }
+          } 
+        }   
+        foreground.transition().duration(1500).attrTween("d", arcTween(pieGenerator([80, 20]))).delay(1000)
+      }
+    }
+  }
+
+</script> 
+<style>
+  path.backColor {
+    fill: #ff9c00;
+  }
+  path.frontColor0 {
+    fill: #545f73;
+  }
+  path.frontColor1 {
+    fill: #ff9c00;
+  }  
+
+  text {
+    font-size: 7em;
+    font-weight: 400;
+    line-height: 16em;
+    fill: black;
+    font-family:오버워치;
+  }
+  @font-face {
+    font-family: 오버워치;
+    src: url(../assets/koverwatch.woff2);
+  } 
+
+</style>
+
+```
 #### 4.3.1 화면 설정 및 반지름설정
 ```js
 const width = window.innerWidth - 20;
@@ -497,7 +589,8 @@ i(1.0); // 20
 
 #### 4.4.3 센서생성 서버 구축
 센서데이타서버를 구축하는 방법은 크게 3가지가 있습니다. 첫번째는 정말 센서를 사서 구축하는 것이며 두번째는 기상청 Open API를 받는 것이며 세번째는 방재기상포털의 있는 파일을 통해 구축하는 방법입니다. 우리는 세번째 방법으로 해보겠습니다. 날짜는 2019년 8월2일 기준으로 했으며 지역은 제가 사는 강동구를 중심으로 했습니다. 방재기상포털은 https://data.kma.go.kr 에 가면 정말 쉽게 자료들을 다운받을 수 있으며 여기서 구축하는 예제의 파일은  MEVN/4장/sensor/RESTAPI/data/20190802_강동구.csv 에 저장해 두었습니다.  
-```csv
+
+```js
 id,time,temp,wv,humi
 402,2019-08-02 00:01,26.2,.4,85.7
 ...
