--- a/_posts/2019-06-30-MEVN교과서-(5).md
+++ b/_posts/2019-06-30-MEVN교과서-(5).md
@@ -287,6 +287,8 @@ const bounds = path.bounds(geojson);
 bounds의 1차원배열은 path의  xmax와 xmin을 가리킵니다. bounds[0][x].. 의 0에서 0, 1을 통해 xmax와 xmin을 나타낼 수 있습니다.  즉, 최소경도, 최대경도(longitude)를 가리키게 됩니다. 
 bounds의 2차원배열은  ymax와 ymin을 가리킵니다. bounds[x][0]..의 0에서 0, 1을 통해 ymax와 ymin을 가리킵니다. 즉, 최소위도, 취대 위도를 가리킵니다. (latitude)
 
+ > bounds 그림 추가 (수정예정)
+
 #### 5) scale
  
 ```js
@@ -295,7 +297,7 @@ const heightScale = (bounds[1][1] - bounds[0][1]) / height;
 const scale = 1 /Math.max(widthScale, heightScale); 
 ```
 그 다음 스케일을 정의해줍니다. 이 스케일은 지도에서 축척을 의미합니다. 넓은 우리나라 땅덩어리를 우리는 작은 화면에 표시해야 합니다.  일단 우리가 구한것은 path의 가장자리를 구한 것입니다. 
-이것중에서 가장 최대값을 구하고 이를 이용해서 축척을 만들어줍니다. 1 : 5만배의 지도를 표시할 때 1 : 50000이라고 나타냅니다. 그걸 우리는 1 / maxScale로 나타낸 것입니다.    
+이것중에서 가장 최대값을 구하고 이를 이용해서 축척을 만들어줍니다. 5만배의 축소율을 가진 지도를 표시할 때 1 : 50000이라고 나타내며 이는 1 / 50000이라고도 합니다. 똑같이 우리는 축척을 1 / maxScale로 나타낸 것입니다.    
 
 #### 6) translate
 ```js
@@ -313,7 +315,7 @@ projection.scale(scale).translate(offset);
   transform: translate(-50%, -50%); 
 }
 ```
-위의 코드처럼 translate로 일단 사물을 옮기고 그 사물의 "크기의 50%" 만큼 또 옮깁니다. 똑같이 우리가 보여주는 크기의 반인 bounds의 반을 x, y - offset으로 셋팅하고 translate를 합니다.  
+위의 코드처럼 translate로 일단 사물을 옮기고 그 사물의 "크기의 50%" 만큼 또 옮깁니다. 똑같이 우리가 보여주는 크기의 반인 bounds의 반을 xoffset, yoffset으로 지정하고 translate를 통해 **중앙**으로 옮깁니다. 
 
 #### 7) selectAll
 ```js
@@ -322,7 +324,7 @@ map
 .enter().append('path') 
 .attr('d', path);  
 ``` 
-D3.js에서 가장 중요한 구조가 뭐냐고 묻는다면 단연코 `.selectAll(요소).data(데이타).enter().append(요소)` 일 것입니다. 데이타 만큼의 가상 DOM을 생성 후 그 DOM에 특정 요소들을 붙이는 것을 이 4가지의 메소드 체인으로 구성할 수 있습니다. _map.features라는 지역적정보를 바탕으로 path를 만들 수 있습니다.
+D3.js에서 가장 중요한 구조가 뭐냐고 묻는다면 단연코 `.selectAll(요소).data(데이타).enter().append(요소)` 일 것입니다. 데이타 만큼의 가상 DOM을 생성 후 selectAll, 그 DOM에 데이타의 개수만큼(data) 특정 요소들을 붙이는 (enter & append)것을 이 4가지의 메소드 체인으로 구성할 수 있습니다. _map.features라는 지역적정보를 바탕으로 path를 만들 수 있습니다.
 
 #### 8) 자몽을 놓을 위도 경도에 따라 매핑하기 
 ```js 
@@ -573,7 +575,7 @@ i(1.0); // 20
 이제부터 실시간 센서시각화사이트를 본격적으로 만들어 볼 것입니다. 
 #### 4.4.1 아키텍처 구축
 아키텍처를 구축해야 합니다. 어떻게 만들 것인지 그림으로 그려보는 것이 중요합니다. 
-![아키텍처](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/4_아키텍처.PNG) 
+![아키텍처](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/4_아키텍처.png) 
 
 아주 간단한 아키텍처입니다. 센서를 내보내는 REST API를 통해 JSON형태의 센서를 받아 MongoDB에 저장한 후 그 값을 뽑아 내어 상태저장소인 Vuex를 통해 상태를 변이시키고 이를 통해 Chart로 표출하는 아키텍처입니다.
 
@@ -581,7 +583,7 @@ i(1.0); // 20
 
 사실 아키텍처는 회사에서 정해주거나 팀원들끼리 정한 약속에 의한 양식에 맞춰 작성하는 것이 일반적입니다. 하지만 혼자 만들 때는 이렇게 아무렇게나 그려보면 됩니다. 아무렇게나 그려도 프로젝트를 설계할 때 그리는 것은 매우 중요하며 습관이 되어야 합니다.
 보통 아키텍처를 그릴 때 아마존에서 사용하는 아이콘을 자주 사용합니다. 
-![아키텍처_아마존](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/4_아키텍처_아마존.PNG)
+![아키텍처_아마존](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/4_아키텍처_아마존.png)
 이 아이콘은 https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/아마존아이콘.ppt 를 통해 바로 다운 받을 수 있습니다. 참고하시길 바랍니다. 
  
 #### 4.4.2 실시간 통신 : websocket방식과 polling 방식 비교  
@@ -666,6 +668,7 @@ main();
 
 이 때 MongoDB의 계정을 사용하는 것이 중요합니다. 왜냐하면 개발보안가이드에 그렇게 적혀 있기 때문입니다. 
  - 개발 보안정리kisa
+
 그다음은 제너레이터를 이용한 예제입니다. 
 
 자 이렇게 1초마다 센서데이타가 io.emit으로 연결된 모든 단말기에 전달되는 서버를 만들었습니다. 
@@ -677,13 +680,12 @@ main();
 
 #### 4.5.1 Vuex 및 프로젝트 뼈대 구축
 Vuex를 써야 하는 이유는 간단합니다. 컴포넌트끼리 데이터를 주고 받으려면 props, emit으로 주고 받게 되는데 프로젝트가 커진다면 데이터를 전달하고 받는 컴포넌트간의 갯수가 많아지고 체크하기도 어렵기 때문입니다. 
-중앙집중화된 어떠한 데이타들의 관리 / 어떠한 데이타들이 변환되는 것을 감시(watch)하고 싶다면 쓰는 것입니다. Vuex를 쓸 때는 비동기적인 것은 actions에 그 외 동기적인 것은 mutations에 넣어야 합니다. 그리고 state의 상태변이에 있어서는 꼭 mutations를 써야 합니다. 즉, actions에서 직접적으로 state를 수정하면 안됩니다. actions에서 mutation으로 commit을 통해 넘겨줘야 하며 mutations에서 state를 수정해야 합니다. 
-
- + mapState, mapActions 등의 메서드를 적용해서 쓰는 것이 간단합니다. 
+중앙집중화된 어떠한 데이타들의 관리 / 어떠한 데이타들이 변환되는 것을 감시(watch)하고 싶다면 쓰는 것입니다. Vuex를 쓸 때는 비동기적인 것은 actions에 그 외 동기적인 것은 mutations에 넣어야 합니다. 그리고 state의 상태변이에 있어서는 꼭 mutations를 써야 합니다. 즉, actions에서 직접적으로 state를 수정하면 안됩니다. actions에서 mutation으로 commit을 통해 넘겨줘야 하며 mutations에서 state를 수정해야 합니다. 또한 반드시 모듈화를 해야 합니다. 
+ 
 
 코드를 보면서 설명하도록 하겠습니다. 
 #### 4.5.2 디자인 구축
-이제 디자인을 좀 수정할 차례입니다. 많은 CSS 라이브러리와 프레임워크가 있지만 저는 절대 쓰지 않습니다. 왜냐하면 실력이 감소하기 때문입니다. 삼성, LG, 네이버, 다 독자적으로 만든 CSS 라이브러리나 자체 디자인으로 웹앱을 만듭니다. 간단한 프로젝트라면 추천드리지만 실력을 키우기 위해서는 스스로 CSS를 다룰줄 알아야 합니다. 
+이제 디자인을 좀 수정할 차례입니다. 많은 CSS 라이브러리와 프레임워크가 있지만 저는 절대 쓰지 않습니다. 왜냐하면 실력이 감소하기 때문입니다. 삼성, LG, 네이버, 다 독자적으로 만든 CSS 라이브러리나 자체 디자인으로 웹앱을 만듭니다. 간단한 프로젝트라면 추천드리지만 실력을 키우기 위해서는 스스로 CSS를 다룰줄 알아야 합니다. 네비게이션 중앙정렬, 카드효과를 구축해보겠습니다.  (반응형)
 
 ### 4.6  실시간 센서시각화사이트 : 차트 컴포넌트 
 이제 차트를 구현해보겠습니다. 
