계획 및 원고 수정

--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -25,11 +25,13 @@ excerpt: MEVN교과서 (1)
 4. 배포 : 12월
 
 # 지은이의 말
-이 책에는 이러한 내용이 중점적으로 있습니다. Vue.js, D3.js, Node.js 그리고 MongoDB를 이용해 웹앱을 만드는 방법을 살펴봅니다. REST API와 실시간 통신, D3.js를 이용한 시각화 방법, 메시지큐, 로그처리, UX자동화, 크로스 브라우징까지 알아보게 될 것입니다.
+이 책에는 이러한 내용이 중점적으로 있습니다. Vue.js, D3.js, Node.js 그리고 MongoDB를 이용해 웹앱을 만드는 방법을 살펴봅니다. REST API와 실시간 통신, D3.js를 이용한 시각화 방법, 메시지큐, 로그처리, UX자동화, 크로스 브라우징 그리고 nginX까지 알아보게 될 것입니다. 이를 통해 실전적인 실력을 기르고자 하는 개발자들에게 심층적인 도움이 되었으면 합니다. 
 
-인터넷에 간단히 검색해서 찾을 수 있는 내용들은 최대한 배제해고 최대한 경험과 노하우를 넣고 그냥 인터넷을 보고 이해하기에는 어려운 지식들을 쉽게 설명했으며 그리고 아름다운 코드 중심의 설명이 가득한 책이 되고자 노력했습니다. 많은 도움이 되었으면 합니다.
+인터넷에 간단히 검색해서 찾을 수 있는 내용들은 최대한 배제해고 최대한 경험과 노하우만을 넣고자 했으며 이해하기 어려운 지식들을 쉽게 설명했으며 아름다운 코드 중심의 설명이 가득한 책이 되고자 노력했습니다. 또한 책의 코드가 그대로 실현되게끔 3번이상의 테스트를 거쳤습니다. 컴퓨터를 다시 켜보고 DB를 다시 삭제하고 코드를 다시 실행하는 등의 테스트를 반복했습니다.
 
-아울러 이 책에 나오는 모든 예제코드들은 https://github.com/wnghdcjfe/MEVN 를 통해 다운 받을 수 있으므로 참고하시길 바랍니다. 또한 궁금한 사항이 있다면 언제든지 jhc9639@naver.com으로 보내주시면 빠르게 답을 드리겠습니다. 기본적인 사항은 최대한 배제하고자 노력했기 때문에 막히는 부분이 생길수도 있습니다. 30분이상 삽질했는데도 안된다면 언제든지 메일을 보내주시기 바랍니다. 고수분들의 조언도 귀담아 듣겠습니다. 언제든지 쓴 충고와 조언들 부탁드립니다. 
+아울러 이 책에 나오는 모든 예제코드들은 https://github.com/wnghdcjfe/MEVN 를 통해 다운 받을 수 있습니다. 또한 궁금한 사항이 있다면 언제든지 jhc9639@naver.com으로 보내주시면 빠르게 답을 드리겠습니다. 공통된 질문에 해당하여 유투브 강의도 제작하겠습니다. 기본적인 사항은 최대한 배제하고자 노력했기 때문에 막히는 부분이 생길수도 있습니다. 열심히 고민하시고 30분이상 삽질했는데도 안되신다면 언제든지 메일을 보내주시기 바랍니다. 
+
+또한, 저보다 고수분들의 조언도 귀담아 듣겠습니다. 언제든지 쓴 충고와 조언들 부탁드립니다. 감사합니다.
 
 # 독자대상
 이 책을 보려면 다음 기술에 대한 기본 지식이 있어야 합니다. 
@@ -69,6 +71,7 @@ excerpt: MEVN교과서 (1)
 - MongoDB의 특징
 - MongoDB의 한계
 - Mongoose와 MongoDB node.js 드라이버
+- MongoDB 설치와 계정(유저 추가)
 - MongoDB mongoose를 이용한 CRUD
 - aggregate와 mapReduce 성능비교 
 
@@ -155,7 +158,6 @@ excerpt: MEVN교과서 (1)
 - 네이버페이 SDK를 이용한 거래연동
 - 카카오페이 SDK를 이용한 거래연동
 - PAYCO SDK를 이용한 거래연동
-
  
 ## 부록 A. 안정적인 서버를 위한 구축과정
 ### A.1 로그시스템
@@ -185,7 +187,6 @@ excerpt: MEVN교과서 (1)
 - JavaScript 호이스팅
 - JavaScript 실행컨텍스트와 클로저
 - 브라우저 렌더링의 이해
-- axios 와 비동기통신
-- 미니프로젝트 : 모달창 플러그인 구현
+- axios 와 비동기통신 
 
  
