--- a/_posts/2019-06-30-MEVN교과서-(3).md
+++ b/_posts/2019-06-30-MEVN교과서-(3).md
@@ -467,7 +467,96 @@ main();
 
 예제 데이타는 [JSONPlaceholder](https://jsonplaceholder.typicode.com/)사이트를 이용했습니다. 이 사이트를 이용하면 예제 데이타를 쉽게 만들어 낼 수 있습니다.
 
-## 2.4.5 MongoDB Mongoose를 이용한 CRUD
+
+## 2.4.5 MongoDB 설치와 계정(유저 추가) v4.0.11
+### MongoDB 설치
+MongoDB CRUD를 하기전 설치하는 방법과 계정추가 방법을 알아보도록 하곘습니다. 먼저 설치입니다. https://www.mongodb.com/download-center/community 에 들어가서 MongoDB Server community를 설치하면 됩니다. 이 후 `mongo` 및 `mongod`를 아무 path에서도 실행가능하게끔 변수 설정을 합니다. 변수설정으로 들어가 path에 C:\Program Files\MongoDB\Server\4.0\bin
+를 추가합니다. (이는 독자의 컴퓨터마다 다를 수 잇으며 MongoDB를 찾고 bin폴더까지의 경로를 찾아 추가하면 됩니다.) 이 후 컴퓨터를 재시작 하면 모든 준비가 끝이 납니다. 
+
+ > 참고
+
+ - 또한, user에 대한 사용자 변수 또는 시스템변수 둘다 가능합니다. 시스템은 다른 계정에 대해서도 가능한 것이며 user에 대한 사용자 변수는 그 계정에 대해서만 path를 설정하는 것을 말합니다. 
+ - bin : 리눅스 파일 시스템 구조 중 bin폴더에 명령들을 저장해 놓는 것이 일반입니다. 똑같이 MongoDB도 기본적인 명령어가 들어가 있습니다. 
+ - 현재 버전은 설치 이후 컴퓨터를 키면 자동적으로 mongoDB가 실행이 됩니다. 
+
+### MongoDB 제거
+설치가 잘 되는 경우가 있습니다. 그것은 이전의 설치된 MongoDB버전 탓일 수도 있습니다. 그 때는 이 3가지의 방법으로 깔끔하게 지울 수 있습니다.
+1. 환경변수 > path > 삭제
+2. 내PC > C드라이브 > MongoDB 폴더 삭제
+3. 프로그램 제거 > MongoDB관련 프로그램 제거 이 후 재시작
+
+
+### 유저추가
+KISA에서 나온 SW보안지침(2017)에 따르면 **애플리케이션에서 DB연결을 통해 데이터를 처리하는 경우 최소 권한이 설정된 계정을 사용해야 한다.취약한 애플리케이션으로 인해 침해사고가 발생하더라도 나머지 부분에 대해 공격자가 액세스 권한을 가지지 않도록 애플리케이션에서 사용하는 DB연결 계정은 해당 애플리케이션이 사용하는 데이터에 대한 읽기, 쓰기, 삭제, 업데이트 권한만 설정한다.** 라고 되어있습니다. 즉, 그냥 연결을 하는 것이 아니라 최소한의 **권한을 가진 계정**을 통해 쿼리를 구현해야 합니다. 
+위의 설명한 예 중 `const mongoDB = 'mongodb://127.0.0.1/my_database'; mongoose.connect(mongoDB, { useNewUrlParser: true })`은 계정 없이 연결한 예입니다. 하지만 production 모드에는 그래서는 안됩니다. 
+
+먼저 MongoDB는 유저에 대한 SCRAM인증방법을 Default로 제공하며 
+ - SCRAM-SHA-1
+ - SCRAM-SHA-256
+
+이 두가지의 방법을 제공합니다. 
+
+ > SCRAM(Salted Challenge Response Authentication Mechanism) : 서버에 사용자 인증을 제공하는 현대적인 암호 기반 시도 응답 인증 방법
+ 
+1. 먼저 추가할 DB를 선택합니다. use DB명입니다.
+2. 유저를 생성합니다. db.createUser({user : 유저이름, pwd : 패스워드, roles : 권한}) 
+
+#### 예제 1. root
+role에는 userAdminAnyDatabase와 root, readWrite, read, Write 가 있습니다.  userAdminAnyDatabase와 root는 admin이라는 DB에서만 가능하며 readWrite, read, Write는 전체 DB에서 가능합니다.
+```shell
+> use admin
+> db.createUser({ user: "root" , pwd: "root123", roles: ["userAdminAnyDatabase"], mechanisms : ["SCRAM-SHA-1"]})
+``` 
+
+
+#### 예제 2. 일반 유저  
+```shell
+> use sensor
+> db.createUser({  
+ user:"dabin",
+ pwd:"dabin12010",
+ roles:[  
+  {  
+     role:"readWrite",
+     db:"sensor"
+  }
+ ],
+ mechanisms:[  
+  "SCRAM-SHA-1"
+ ]
+})
+```  
+
+#### 예제 3. 일반 유저 role 과 db추가
+```shell
+> use sensor
+> db.createUser({  
+ user:"dabin",
+ pwd:"dabin12010",
+ roles:[  
+  {  
+     role:"readWrite",
+     db:"sensor"
+  }, 
+  {  
+     role:"read",
+     db:"photo"
+  }, 
+ ],
+ mechanisms:[  
+  "SCRAM-SHA-1"
+ ]
+}) 
+```
+위의 코드 처럼 role과 DB별로 각각 다르게 추가할 수도 있다. 
+
+### 이외 계정(user)관련 명령어
+ - 전체유저확인 : db.getUsers() 
+ - 유저삭제 : db.dropUser("dabin") ""안에 user이름을 넣어서 삭제 
+ - 유저 찾기 : db.getUsers({ filter: { mechanisms: "SCRAM-SHA-256" } })를 통해 filter 
+ 
+
+## 2.4.6 MongoDB Mongoose를 이용한 CRUD
 mongoDB는 스키마를 정하지 않아도 데이타가 마구잡이로 들어가는 것이 장점입니다. 실제로 네이버에서 많은 서비스들을 통합적으로 관리하는 로그DB를 생성할 때 스키마가 모두 다르기 때문에 그 이유로 mongoDB를 통해 데이터를 쌓았다고 합니다. 많은 서비스를 통합적으로 관리하는 것에서는 스키마레스, 스키마가 없는 것이 좋지만 보통 DB를 만들 때 스키마를 정합니다. 정하지 않는다면 추후 관리가 어려운 측면이 있기 때문입니다.
 
 ### 2장/mongodb/models/simple_mongoose.js
@@ -667,7 +756,7 @@ Photo.collection.drop()
 ```
 제거는 이렇게 하면 됩니다.이렇게 간단하게 CRUD를 살펴보았습니다.  
 
-## 2.4.6 aggregate와 mapReduce 성능비교 
+## 2.4.7 aggregate와 mapReduce 성능비교 
 MongoDB에서의 집적된 결과물을 내기 위한 방법은 크게 2가지입니다.
  - aggregate
  - mapReduce 
