--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -24,6 +24,12 @@ excerpt: MEVN교과서 (1)
 3. 최종수정 : 11월
 4. 배포 : 12월
 
+## 할일 목록
+ - [ ] mongodb aggregate, mapreduce 예제 코드 수정
+ - [ ] 함수형 프로그래밍 설명 다듬기 
+ - [ ] MongoDB CRUD 예제 다듬기
+
+
 # 지은이의 말
 이 책에는 이러한 내용이 중점적으로 있습니다. Vue.js, D3.js, Node.js 그리고 MongoDB를 이용해 웹앱을 만드는 방법을 살펴봅니다. REST API와 실시간 통신, D3.js를 이용한 시각화 방법, 메시지큐, 로그처리, UX자동화, 크로스 브라우징 그리고 nginX까지 알아보게 될 것입니다. 이를 통해 실전적인 실력을 기르고자 하는 개발자들에게 심층적인 도움이 되었으면 합니다. 
 
@@ -91,7 +97,7 @@ excerpt: MEVN교과서 (1)
 ## 4. 실시간 데이터시각화사이트제작  
 
 ### 4.1 시각화 라이브러리 D3.js
-- D3의 구조 및 다른 시각화라이브러리 
+- D3와 다른 시각화라이브러리 비교
 
 ### 4.2 D3.js : 지도매핑모듈
 - topojson과 geojson비교
@@ -123,24 +129,24 @@ excerpt: MEVN교과서 (1)
 ## 5. 미술작가소개플랫폼 제작
 ### 5.1 아키텍처
 - 아키텍처 설계
-- REST API 설계
-- CORS 및 주의사항
+- REST API 설계 
 - 요청 제한 및 IP 설정 
-- MongoDB 스키마 구축
-- 디렉토리 설계
-- 이벤트 설계 
+- 스키마 구축
+- 디렉토리 및 이벤트 설계 
 
 ### 5.2 JWT 인증방식 및 구축
  - JWT 소개
- - postman을 통한 테스트
+ - postman을 통한 테스트 
 
-### 5.3 JWT Passport를 이용한 naver, kakao, facebook 로그인  
- - 작가별 로그인페이지
- - JWT 연동
+### 5.3 로그인 연동  
+ - 로그인페이지구축 
+ - naver, kakao, facebook 로그인 
+ - JWT를 통한 인증
 
-### 5.4 작가별 미술품정보 입력모듈  
+### 5.4 작가별 미술품정보 입력모듈 구축
 - 이미지 업로드 모듈 
-- summernote 또는 toast UI editor를 통한 입력 모듈
+- summernote를 통한 입력 모듈제작
+- toast UI editor를 통한 입력 모듈제작
 
 ### 5.5 개발보안 
 - XSS, CSRF토큰 등 보안 주의사항 
@@ -171,6 +177,7 @@ excerpt: MEVN교과서 (1)
 ### A.3 메시지큐 
 - AMQP(Advanced Message Queueing Protocol)를 활용한 메시지큐로 서버불안정화 대비
 - 메시지큐 만들어보기
+- RabbitMQ 이용예제
 
 ## 부록 B. UX 테스트 자동화 프로그램 
 - requests를 통한 과부화 테스트
