--- a/_posts/2019-06-30-MEVN교과서-(5).md
+++ b/_posts/2019-06-30-MEVN교과서-(5).md
@@ -28,7 +28,7 @@ excerpt: MEVN교과서 (5)
 D3를 사용하면 임의의 데이터를 DOM (Document Object Model)에 바인딩 한 다음 문서에 데이터 기반 변환을 적용 할 수 있습니다. 예를 들어 D3을 사용하여 숫자로 이루어진 배열에서 HTML 테이블을 생성 할 수있고 바차트, 선차트 등을 만들 수 있습니다.  이외에도 지도, flow, treemap, pie chart, 상호작용, 애니메이션 등 무궁무진하게 정말 많은 시각화그림들을 만들 수 있습니다.
 매우 작은 용량의 라이브러리로 정말 작은 부분 하나하나 세세하게 커스터마이징이 가능한 장점을 가지고 있습니다. 
 
-#### 4.1.1 D3의 구조 및 다른 시각화라이브러리
+#### 4.1.1 D3와 다른 시각화라이브러리 비교
 무언가 프로젝트를 하기 위해 Stack을 설정할 때 다른 라이브러리와의 비교는 필수입니다. 그렇다면 현존하는 라이브러리와 D3.js를 비교해보겠습니다. 
 
 2019년 7월 28일 기준입니다. 각 라이브러리의 최신버전을 통해 비교했습니다.
@@ -602,6 +602,32 @@ id,time,temp,wv,humi
 센서를 만드는 로직은 이렇게 cnt라는 전역변수를 통해 구현할 수도 있으며 제너레이터를 이용해서도 구현할 수 있습니다. 
 먼저 cnt를 이용한 예제입니다. 
 
+일단 먼저 유저를 추가합니다. 
+```js
+db.createUser({  
+ user:"dabin",
+ pwd:"dabin12010",
+ roles:[  
+  {  
+     role:"readWrite",
+     db:"sensor"
+  }
+ ],
+ mechanisms:[  
+  "SCRAM-SHA-1"
+ ]
+})
+```
+다빈, dabin이라는 이름을 가진 user를 추가합니다. sensor라는 DB를 만들지 않았다면 test라는 DB에 자동적으로 user가 추가가 됩니다.  
+0. mongo shell을 구동합니다.
+1. sensor데이타베이스로 이동 `use sensor` 
+2. 데이타베이스확인 : `show dbs` 아직 sensor가 생성되지 않았습니다.
+3. 데이타베이스 생성, db.sensor.insert({"kundol" : 1})
+4. 데이타베이스확인 : `show dbs` sensor DB가 생성되었습니다!
+
+이제 앞서 설명한 createUser을 하면 sensor에 다빈이가 추가된 것을 볼 수 있습니다. `db.getUsers()`로 유저를 확인할 수 있습니다.
+
+서버에 들어가 node server.js로 서버를 구동시키고 클라이언트에서는 npm run serve를 통해 테스트 서버를 구동시킵니다.
 #### MEVN/4장/sensor/서버/server.js
 ```js
 const express = require('express')
@@ -662,12 +688,7 @@ const main = async ()=>{
   app.listen(PORT, ()=> console.log(`센서서버 구동..! : 시작 http://127.0.0.1:${PORT}`));
 }
 main();  
-```
-차근차근 코드를 보도록 하겠습니다. 
- - 공통된 코드 설명
-
-이 때 MongoDB의 계정을 사용하는 것이 중요합니다. 왜냐하면 개발보안가이드에 그렇게 적혀 있기 때문입니다. 
- - 개발 보안정리kisa
+``` 
 
 그다음은 제너레이터를 이용한 예제입니다. 
 
